--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Consumo de API REST con JavaScript",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d src"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/FranciscoMoralesSanchez/consumo-de-API-REST-con-JavaScript/issues"
   },
-  "homepage": "https://github.com/FranciscoMoralesSanchez/consumo-de-API-REST-con-JavaScript#readme"
+  "homepage": "https://github.com/FranciscoMoralesSanchez/consumo-de-API-REST-con-JavaScript#readme",
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
